...

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.ar.bakingapp.fragments.PlayerFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/viewBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_player" />

...
